--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ button
 {   
     width: 691px;
     height: 130px;
+    margin-bottom: 15px;
     text-align: center;
 }
 #donation-amount-info-1 , #donation-plan-info-1 ,#projects-heading,#subscribe-head
@@ -268,6 +269,7 @@ transform: scaleY(1.1);
     background: #D9D9D9;
     border: none;
     border-radius: 5px 0px 0px 5px;
+    margin-right: -4px;
 }
 
 .footer
