--- a/style.css
+++ b/style.css
@@ -271,7 +271,15 @@ transform: scaleY(1.1);
     border-radius: 5px 0px 0px 5px;
     margin-right: -4px;
 }
-
+.subscribe-form input::placeholder
+{
+    padding-left: 20px;
+    font-size: 16px;
+}
+#subscribe-form-button 
+{
+    border-radius: 0 5px 5px 0;
+}
 .footer
 {   
     width: 1440px;
