--- a/style.css
+++ b/style.css
@@ -18,13 +18,15 @@ body {
     width: 1440px;
     height: 669px;
     background-image: url("./images/head_bg.png");
+    background-size: cover;
+    height: 100vh;
     background-repeat: no-repeat;
+
 }
 
 .header-part-info
 {
     width: 826px;
-    height: 120px;
     text-align: center;
 }
 
@@ -60,7 +62,10 @@ button
     color: white;
     cursor: pointer;
 }
-
+#donate-now
+{
+    margin-top: -450px;
+}
 .donation-amount-info
 {   
     width: 691px;
